# nami_desktop

./: .env.sample  .gitignore  LICENSE  NAMI desktop.spec  README.md  pyproject.toml
.nami/: add_instruction.md  custom_instruction.md  default_instruction.md  deveropment_instruction.md  mcp_setting.json  setting.json  template.json
src/: app_view.py  main.py
src/core/context/context_management/: context_manager.py  thread_loader.py
src/core/prompts/: system.py
src/core/storage/: database.py
src/core/task/: setting_load.py  task.py
src/core/tools/: bash_tool.py  edit_tool.py  grep_tool.py  ls_tool.py  markitdown_tool.py  pdf_read_tool.py  python_repl_tool.py  read_tool.py  shell_tool.py  user_memory_rag.py  write_tool.py
src/static/: script.js  style.css
src/templates/: index.html  loading.html
